// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HamburgerDropdown /> snapshop Test renders <NavLinkContainer /> with correct style hieght when open prop is false 1`] = `
<NavLinkContainer
  className="HamburgerDropdown"
  style={
    Object {
      "height": "0",
      "paddingBottom": "0",
    }
  }
/>
`;

exports[`<HamburgerDropdown /> snapshop Test renders <NavLinkContainer /> with correct style hieght when open prop is true 1`] = `
<NavLinkContainer
  className="HamburgerDropdown"
  style={
    Object {
      "height": "200px",
    }
  }
/>
`;

exports[`<NavLinkContainer /> snapshop Test renders div with correct classes and inline-styles 1`] = `
<div
  className="dummy"
  style={
    Object {
      "color": "blue",
    }
  }
>
  <NavLinkWrapper
    active={true}
    exact={true}
    to="/"
  >
    Home
  </NavLinkWrapper>
  <NavLinkWrapper
    active={true}
    strict={true}
    to="/menu"
  >
    Menu
  </NavLinkWrapper>
  <NavLinkWrapper
    active={true}
    to="/meet"
  >
    Meet The Chiefs
  </NavLinkWrapper>
  <NavLinkWrapper
    icon="CartIcon.png"
  >
    Cart
  </NavLinkWrapper>
  <NavLinkWrapper
    icon="UserIcon.png"
    to="/login"
  >
    Login
  </NavLinkWrapper>
</div>
`;

exports[`<Navigation /> Snapshop Tests renders nav with fixed class when fixed prop is true 1`] = `
<nav
  className="fixed"
/>
`;

exports[`<Navigation /> Snapshop Tests renders nav with no class when fixed prop is false 1`] = `<nav />`;

exports[`<Navigation /> snapshop Test renders div with no transparent background when transparent prop is false 1`] = `
<div
  className="navbar"
  style={Object {}}
>
  <div
    className="container"
  />
</div>
`;

exports[`<Navigation /> snapshop Test renders div with transparent background when transparent prop is true 1`] = `
<div
  className="navbar"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <div
    className="container"
  />
</div>
`;
